--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "axios": "^0.19.2",
     "chrome-aws-lambda": "^3.1.1",
     "puppeteer-core": "~3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
