--- a/serverless.yml
+++ b/serverless.yml
@@ -36,8 +36,8 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  doEvent:
+    handler: handler.doEvent
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
